# py_fatigue

./: .buildinfo  .bumpversion.cfg  .cruft.json  .exec-helper  .flake8  .gitchangelog.rc  .gitignore  .pylintrc  .python-version  CHANGELOG.md  CHANGELOG.rst  GitVersion.yml  README.md  README_DEV.md  bumpversion.py  changelog.html  genindex.html  index.html  invoke.yaml  junit.xml  mypy.ini  objects.inv  poetry.toml  py-modindex.html  pyproject.toml  search.html  searchindex.js
.github/workflows/: black.yml  build.yml  build_format_lint_test.yml  build_format_lint_test_publish.yml  build_format_lint_test_publish.yml.legacy  bump-and-build.yml  cd.yml  ci.yml  coverage.yml  lint.yml  pages.yaml  pages.yml  publish.yml
.jupyter/: jupyter_notebook_config.py  migrated
_docs/: objects.inv
_docs/_sources/develop/: 00-index.rst.txt  03-devops.rst.txt  04-template.rst.txt
_docs/doctrees/: environment.pickle  index.doctree
_docs/html/: index.html  py-modindex.html  search.html  searchindex.js
_docs/user/: 01-absolute-noob.html
_sources/: index.rst.txt
_sources/ado/: 01-index.rst.txt  03-pipelines.rst.txt  04-boards.rst.txt
_sources/api/: styling.rst.txt  utils.rst.txt
_sources/develop/: 01-readme.md.txt  02-version-control.rst.txt
_sources/user/: 01-absolute-noob.rst.txt  02-user-guide.rst.txt
_static/: README
_static/_img/: py-fatigue-logo.xcf
_static/css/: custom.css
_static/js/: custom.js
ado/: 01-index.html  02-repos.html  03-pipelines.html  04-boards.html  05-test-plans.html  06-artifact-feeds.html
api/: 01-index.html  styling.html  testing.html  utils.html
api/cycle_count/: cycle_count.html  cycle_count_.html  histogram.html  rainflow.html  utils.html
api/damage/: crack_growth.html  damage.html  stress_life.html
api/geometry/: cylinder.html  generic.html  geometry.html
api/material/: crack_growth_curve.html  material.html  sn_curve.html
api/stress/: mean_stress.html  stress.html  stress_range.html
develop/: 00-index.html  01-readme.html  02-version-control.html  03-devops.html  04-template.html  05-features.html
docs/: .buildinfo  conf.py  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/.doctrees/: environment.pickle  index.doctree
docs/_sources/: index.rst.txt
docs/_static/: documentation_options.js
docs/_templates/: layout.html
docs/ado/: 01-index.html  02-repos.html  03-pipelines.html  04-boards.html  05-test-plans.html  06-artifact-feeds.html
docs/api/: 01-index.html  styling.html  testing.html  utils.html
docs/develop/: 00-index.html  01-readme.html  02-version-control.html  03-devops.html  04-template.html  05-features.html  05-features.rst
docs/doctrees/: environment.pickle  index.doctree
docs/html/: .buildinfo  searchindex.js
docs/user/: 01-absolute-noob.html  02-user-guide.html
export/: README.MD
notebooks/: 0.0.0 - PD.Generic.development-guide.ipynb  0.0.0 - _Test.ipynb  0.0.1 - PD.Generic.Paris-curve-functional-tests.ipynb  0.1.0 - PD.Documentation.Noob.ipynb  0.1.1 - PD.Documentation.CycleCount.ipynb  0.1.2 - PD.Documentation.CycleCount-sum.ipynb  0.1.3 - PD.Documentation.CycleCount-mean-stress-effect.ipynb  0.2.0 - PD.Geometry.Functional Tests.ipynb  0.3.0 - PD.Crack-growth.Functional Tests.ipynb  0.3.1 - PD.Crack-growth.Crack-geometries.ipynb  0.3.2 - PD.Crack-growth.HOL_CYL_01.ipynb  0.4.0 - PD.Fitting.skewnorm.ipynb  0.5.0 - PD.Use-case.LFFD-effect-quantification.ipynb  0.5.1 - PD.Use-case.LFFD-effect-quantification-3-yrs.ipynb  0.5.2 - PD.Use-case.LFFD-effect-quantification-3-yrs-plot.ipynb  0.6.0 - PD.Theil-nonlinear-damage.ipynb  0.7.0 - PD.Pavlou-nonlinear-damage.ipynb  1.a.1 - PD.Documentation.Noob.ipynb  1.a.2 - PD.Documentation.CycleCount.ipynb  1.a.3 - PD.Documentation.CycleCoun-sum.ipynb  1.a.4 - PD.Documentation.CycleCoun-mean-stress-effect.ipynb  1.x.2 - PD.Crack-growth.Functional Tests.ipynb  1.x.3 - PD.Crack-growth.Crack-geometries.ipynb  1.x.4 - PD.Crack-growth.HOL_CYL_01.ipynb  1.y.1 - PD.Geometry.Functional Tests.ipynb  2022.pf.CycleCount.solve_lffd.ipynb  2022.test_cycle_count.ipynb  2022.test_histogram.ipynb  2022.test_stress_range.ipynb  2022.test_utils.ipynb  Absolute-noob.ipynb  C:\Users\AM000062\Desktop\Jupyter Notebook Assignments\exp_data.json  Paris curve - Functional tests.ipynb  README
py_fatigue/: __init__.py  styling.py  testing.py  utils.py  version.py
py_fatigue/cycle_count/: __init__.py  cycle_count.py  histogram.py  rainflow.py  utils.py
py_fatigue/damage/: __init__.py  crack_growth.py  stress_life.py
py_fatigue/geometry/: __init__.py  cylinder.py  generic.py
py_fatigue/material/: __init__.py  crack_growth_curve.py  sn_curve.py
py_fatigue/mean_stress/: __init__.py  corrections.py  mean_stress.py
py_fatigue/stress_range/: __init__.py  stress_range.py
references/: README
reports/: README
reports/figures/: README
rst_docs/: README  README.md  conf.py  index.rst
rst_docs/_templates/: template.html
rst_docs/ado/: 02-repos.rst  06-artifact-feeds.md
rst_docs/develop/: 00-index.rst
rst_docs/user/: 01-absolute-noob.rst
scripts/: bootstrap.bat  bootstrap.sh  pylint_exit_handler.sh
tasks/: __init__.py  ado.py  colors.py  cruft.py  docs.py  export.py  notebook.py  performance.py  quality.py  search.py  system.py  test.py
tests/: conftest.py  test_testing.py  test_utils.py  test_version.py
tests/cycle_count/: test_cycle_count.py  test_histogram.py  test_rainflow.py
tests/damage/: test_crack_growth.py  test_crack_growth_comprehensive.py  test_stress_life.py
tests/data/: strain_signal.txt
tests/geometry/: test_cylinder.py  test_generic.py
tests/material/: test_crack_growth_curve.py  test_sn_curve.py
tests/mean_stress/: test_corrections.py  test_mean_stress.py
tests/stress_range/: test_stress_range.py
user/: 01-absolute-noob.html  02-user-guide.html
user/additional/: 01-index.html  glossary.html  relevant_guidelines.html
user/examples/: 01-notebook_setup.html  02-sn_curve.html  03-cg_curve.html  04-cycle_counting.html  05-cycle_count_sum.html  06-mean_stress.html  07-damage.html
(+228 files in other folders)
